--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,2 +1,3 @@
-<p>home works!</p>
 <app-greeting [message]="homeMessage()" />
+<app-counter />
+<input placeholder="type something..." type="text" (keyup)="keyUpHandler()" />
