complete counter inc, dec, reset with signal and add todos

--- a/src/app/components/counter/counter.html
+++ b/src/app/components/counter/counter.html
@@ -1,7 +1,7 @@
-<p>Counter value: 0</p>
+<p>Counter value: {{ counterValue() }}</p>
 
 <div>
-  <button>Increment</button>
-  <button>Reset</button>
-  <button>Decrement</button>
+  <button (click)="increment()">Increment</button>
+  <button (click)="reset()">Reset</button>
+  <button (click)="decrement()">Decrement</button>
 </div>
