--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -12,7 +12,7 @@ header {
     justify-content: space-between;
     align-items: center;
 
-    span {
+    > span {
         &:hover {
           color: #777;
         }
