--- a/src/app/todos/todos.html
+++ b/src/app/todos/todos.html
@@ -1,3 +1,10 @@
-@for (todo of todoItems(); track todo.id) {
-  <p>{{ todo.title}}</p>
-}
+<h3>Todos List</h3>
+
+<ul class="todos">
+  @for (todo of todoItems(); track todo.id) {
+  <li class="todos__item">
+    <input type="checkbox" id="todo__{{todo.id}}" [value]="todo.completed" />
+    <label for="todo__{{todo.id}}">{{todo.title}}</label>
+  </li>
+  }
+</ul>
