--- a/src/app/todos/todos.html
+++ b/src/app/todos/todos.html
@@ -5,6 +5,6 @@
 }
 <ul class="todos">
   @for (todo of todoItems(); track todo.id) {
-    <app-todo-item [todo]="todo" />
+    <app-todo-item (todoToggled)="updateTodoItem($event)" [todo]="todo" />
   }
 </ul>
