--- a/src/app/todos/todos.html
+++ b/src/app/todos/todos.html
@@ -1,10 +1,16 @@
 <h3>Todos List</h3>
 
 @if(!todoItems().length) {
-  <p>Loading...</p>
+<p>Loading...</p>
 }
+
+<form>
+  <label> Filter Todos</label>
+  <input [(ngModel)]="searchItem" placeholder="Search todos..." />
+</form>
+
 <ul class="todos">
   @for (todo of todoItems(); track todo.id) {
-    <app-todo-item (todoToggled)="updateTodoItem($event)" [todo]="todo" />
+  <app-todo-item (todoToggled)="updateTodoItem($event)" [todo]="todo" />
   }
 </ul>
